--- a/index.html
+++ b/index.html
@@ -787,41 +787,47 @@
           </p>
         </div>
         <div class="tab-panel panel-h" role="tabpanel">
-          <h6>Hoshino Resorts TOMAMU</h6>
+          <h6>Svalbard Café</h6>
 
           <p>
-            Hoshino Resorts TOMAMU is known for its dry, powdery snow and
-            diverse ski courses, catering to all levels. Highlights include the
-            Ice Village and Mina-Mina Beach, Japan's largest indoor wave pool.
+            A restaurant renovated from an old house in Minami-Furano Town. It’s
+            a hidden gem known for its roast beef. Tentatively, it is expected
+            to open a stall at a roadside station starting in mid-July. They
+            have promised to be open until 7:30 PM in winter (as agreed with the
+            tourism association), so we hope they will keep this commitment.
+          </p>
+          <p>&nbsp;</p>
+
+          <h6>Niboshichuka Yuki to Hana</h6>
+
+          <p>
+            A specialty shop for niboshi ramen and mixed noodles. The Furano
+            game meat noodles use broth made from Ezo deer and bear,
+            representing the ultimate in local production for Hokkaido. It is
+            featured in the "Michelin Guide Hokkaido 2017."
           </p>
 
           <p>&nbsp;</p>
 
-          <h6>Furano Ski Resort</h6>
+          <h6>Asahikawa Ramen Village</h6>
 
           <p>
-            Furano Ski Resort features "champagne powder" snow, offering long,
-            groomed runs suitable for all skill levels. The resort is famous for
-            its stunning mountain and valley views.
+            Asahikawa Ramen Village was established in August 1996 amid a
+            growing civic awareness to promote the ramen culture that Asahikawa
+            takes pride in.
           </p>
 
           <p>&nbsp;</p>
 
-          <h6>Kamui Ski Links</h6>
+          <h6>Jiyuken</h6>
 
           <p>
-            Kamui Ski Links provides a relaxed atmosphere with both groomed and
-            ungroomed powder runs. Known for its tree runs, it offers varied
-            terrain perfect for all skill levels.
+            Founded in 1949, "Jiyuken" is a restaurant specializing in tonkatsu
+            and grilled meat located in Asahikawa's shopping park. It was also
+            featured as a setting in the TV drama "Kodoku no Gourmet."
           </p>
 
           <p>&nbsp;</p>
-
-          <p>
-            These resorts offer exceptional powder snow and a variety of skiing
-            experiences, from family-friendly runs to advanced backcountry
-            adventures.
-          </p>
         </div>
         <div class="tab-panel panel-i" role="tabpanel">
           <h6>Shirogane Blue Pond (Aoiike)</h6>
@@ -950,8 +956,8 @@
               <div class="answer">
                 <p>
                   You can book the travel package online through our official
-                  website or by calling our customer service hotline. We also
-                  accept bookings through authorized travel agents.
+                  website . We also accept bookings through authorized travel
+                  agents.
                 </p>
               </div>
             </div>
@@ -1017,11 +1023,7 @@
             </label>
 
             <div class="answer">
-              <p>
-                Yes, we offer installment payment options. Please contact our
-                customer service team for more details on how to set up an
-                installment plan.
-              </p>
+              <p>No, installment payments are not available.</p>
             </div>
           </div>
           <div class="faq">
@@ -1054,9 +1056,9 @@
 
             <div class="answer">
               <p>
-                You can cancel your booking online through our website or by
-                contacting our customer service team. Please have your booking
-                reference number ready.
+                Cancellation of reservations can be done online through our
+                website or by contacting our customer service team using the
+                following methods.
               </p>
             </div>
           </div>
