--- a/index_jp.html
+++ b/index_jp.html
@@ -45,7 +45,7 @@
         <h5 class="header-title">
           ニーズに合わせた柔軟なキャンピングカーツアーパッケージ
         </h5>
-        <a class="header-reservation-btn" href="./">今すぐ予約</a>
+        <a class="header-reservation-btn" href="./">予約申し込みする</a>
       </div>
       <div id="video-area">
         <video
@@ -145,14 +145,6 @@
             class="tab-input"
             value="maker"
           />
-          <input
-            id="tab-e"
-            type="radio"
-            role="tab"
-            name="tab-radio"
-            class="tab-input"
-            value="maker"
-          />
           <div class="label-wrapper">
             <h2 class="tab-label-heading selected">
               <label class="tab-label" for="tab-a">概要</label>
@@ -169,9 +161,6 @@
             <h2 class="tab-label-heading">
               <label class="tab-label" for="tab-d">日程</label>
             </h2>
-            <h2 class="tab-label-heading">
-              <label class="tab-label" for="tab-e">ご利用料金</label>
-            </h2>
           </div>
           <div class="tab-panel panel-a" role="tabpanel">
             <div class="tab-content">
@@ -183,25 +172,26 @@
                 <div class="evenly_space">
                   <h6>販売期間:</h6>
                   <p>
-                    旅行パッケージは2024年12月20日から2025年3月31日まで利用可能で、販売期間は2024年8月1日から2025年3月20日までです。
+                    旅行パッケージは2024年12月21日から2025年3月31日まで利用可能で、販売期間は2024年8月1日から2025年3月20日までです。
                   </p>
                   <h6>滞在期間:</h6>
                   <p>
                     最低5日間のご予約が必要で、ご希望に合わせて滞在期間をカスタマイズできます。
                   </p>
-                  <h6>多彩なアクティビティ</h6>
-                  <p>
-                    スキー以外にも、パウダーベルトでは地元のダイニング、アイスビレッジ、高級宿泊施設など、充実したアフタースキーシーンを楽しめます。星野リゾート
-                    トマムのようなリゾートでは、ミナミナビーチ（日本最大の屋内プール）やアイスビレッジのアイスバーなど、ユニークなアトラクションがあり、ワクワクする滞在をお約束します。
-                  </p>
-                  <p>
-                    比類のない雪質、多様なスキーオプション、そして活気あふれるアフタースキーアクティビティを、美しい北海道パウダーベルトで体験してください。
-                  </p>
+                  <h6>パッケージに含まれるもの:</h6>
+                  <ul>
+                    <li>キャンピングカーのレンタル</li>
+                    <li>
+                      HPBの5日間パス（https://hokkaido-powder-belt.jp/index-en.php）
+                    </li>
+                    <li>星野リゾート トマムのサービスへのアクセス</li>
+                    <li>星野リゾート OMO 7旭川のサービスへのアクセス</li>
+                  </ul>
                 </div>
               </div>
 
               <div class="reservation-btn">
-                <a href="#reservation">今すぐ予約</a>
+                <a href="#reservation">予約申し込みする</a>
               </div>
             </div>
           </div>
@@ -239,40 +229,75 @@
                     <li>お一人様につき朝食2回無料券</li>
                     <li>充実したアメニティ</li>
                     <li>ミナ・ミナビーチ</li>
-                    <li>麒麟の湯 入浴</li>
+                    <li>木林の湯 入浴</li>
+                    <li>駐車 ＊駐車スペースの確保は含まれていません</li>
                   </ul>
                 </ul>
               </div>
             </div>
 
-            <a href="./" class="my-midium">詳細</a>
+            <div class="text-center">
+              <a href="https://www.snowtomamu.jp/winter/en/" class="my-midium"
+                >Read More</a
+              >
+            </div>
             <div class="column-2 my-midium">
               <div>
-                <h5>星野リゾート トマム</h5>
+                <h5>星野リゾート OMO7旭川</h5>
                 <p>
                   星野リゾート
-                  トマムは、北海道の中心に位置する最高級のスキーリゾートです。
-                  北海道の中心に位置する最高級スキーリゾートです。ラグジュアリーとアドベンチャーが融合した
-                  ウィンタースポーツを愛する方にも、リラックスした休暇を求める方にも理想的な場所です。
+                  OMO7旭川は、北海道旭川市の中心部に位置するスタイリッシュで現代的なホテルです。北海道パウダーベルトを探索し、さまざまな冬のスポーツアクティビティを楽しむのに最適な拠点を提供します。
                 </p>
                 <ul class="my-midium">
-                  <li>トラベルプラン特典:</li>
+                  <li>旅行プランの特典:</li>
                   <ul>
-                    <li>お一人様につき朝食2回無料券</li>
-                    <li>充実したアメニティ</li>
-                    <li>ミナ・ミナビーチ</li>
-                    <li>麒麟の湯 入浴</li>
+                    <li>1人につき2枚の朝食チケット</li>
+                    <li>充実したアメニティセット</li>
+                    <li>サウナ施設</li>
+                    <li>30種類のスノーワックスを無料提供</li>
+                    <li>乾燥室の利用</li>
+                    <li>地元情報やリソースのためのOMO Baseへのアクセス</li>
                   </ul>
                 </ul>
-
-                <a href="./" class="my-midium">詳細</a>
               </div>
+              <div class="swiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img src="./common/images/omo7_asahikawa.webp" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./common/images/breakfast.webp" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./common/images/plateau_sauna_2.webp" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./common/images/waxbar.webp" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./common/images/dryingroom.webp" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./common/images/omobase.webp" />
+                  </div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+              </div>
+            </div>
+            <p class="warning">
+              駐車料金はプランに含まれておらず、Hoshino
+              ResortsのOMO7Asahikawaで別途支払う必要があります。
+            </p>
 
-              <img src="./common/images/omo7_asahikawa.webp" />
+            <div class="text-center my-midium">
+              <a href="https://omo-hotels.com/asahikawa/en/" class="my-midium"
+                >詳細を見る</a
+              >
             </div>
 
             <div class="reservation-btn">
-              <a href="#reservation">今すぐ予約</a>
+              <a href="#reservation">予約申し込みする</a>
             </div>
           </div>
           <div class="tab-panel panel-c" role="tabpanel">
@@ -311,13 +336,13 @@
             </div>
 
             <div class="reservation-btn">
-              <a href="#reservation">今すぐ予約</a>
+              <a href="#reservation">予約申し込みする</a>
             </div>
           </div>
           <div class="tab-panel panel-d" role="tabpanel">
             <p class="my-midium">
               最低5日間から滞在をカスタマイズ可能。
-              2024年12月20日から2025年3月31日まで。
+              2024年12月21日から2025年3月31日まで。
             </p>
             <h6>旅行プラン例</h6>
             <ul>
@@ -385,72 +410,7 @@
             </ul>
 
             <div class="reservation-btn">
-              <a href="#reservation">今すぐ予約</a>
-            </div>
-          </div>
-
-          <div class="tab-panel panel-e" role="tabpanel">
-            <div class="column-2">
-              <div>
-                <ul>
-                  <li>
-                    5日分パッケージ:
-                    <ul>
-                      <li><span>19歳以上</span>: 68,000 円 (税込)</li>
-                      <li><span>18歳以下</span>: 55,000 円 (税込)</li>
-                    </ul>
-                  </li>
-                  <li>
-                    追加日数:
-                    <ul>
-                      <li><span>19歳以上</span>: 15,000円</li>
-                      <li><span>18歳以下</span>: 10,000円</li>
-                    </ul>
-                  </li>
-                </ul>
-                <p>※6歳未満のお子様は無料</p>
-              </div>
-              <div>
-                <table>
-                  <thead>
-                    <tr>
-                      <th>1日</th>
-                      <th>19歳以上</th>
-                      <th>18歳以下</th>
-                    </tr>
-                  </thead>
-                  <tr>
-                    <td>5日</td>
-                    <td>68,000円</td>
-                    <td>55,000円</td>
-                  </tr>
-                  <tr>
-                    <td>6日</td>
-                    <td>83,000日</td>
-                    <td>65,000日</td>
-                  </tr>
-                  <tr>
-                    <td>7日</td>
-                    <td>98,000円</td>
-                    <td>75,000円</td>
-                  </tr>
-                  <tr>
-                    <td>8日</td>
-                    <td>113,000円</td>
-                    <td>85,000円</td>
-                  </tr>
-                  <tr>
-                    <td>9日</td>
-                    <td>128,000円</td>
-                    <td>95,000円</td>
-                  </tr>
-                  <tr>
-                    <td>10日</td>
-                    <td>143,000円</td>
-                    <td>105,000円</td>
-                  </tr>
-                </table>
-              </div>
+              <a href="#reservation">予約申し込みする</a>
             </div>
           </div>
         </div>
@@ -569,7 +529,7 @@
         </div>
 
         <div class="reservation-btn my-midium">
-          <a href="#reservation">今すぐ予約</a>
+          <a href="#reservation">予約申し込みする</a>
         </div>
       </section>
 
@@ -678,7 +638,7 @@
             <h6>大雪山層雲峡・黒岳スキー場</h6>
 
             <p>
-              大雪山の秀峰・「黒岳」（1,984ｍ）へと誘う黒岳ロープウェイ&リフト。
+              黒岳ロープウェイとリフトで、大雪山の壮大な頂き「黒岳」（1,984m）へとご案内します。大雪山の手つかずの壮麗な自然を体験してください。アイヌ語で「神々の遊ぶ庭」を意味する「カムイミンタラ」として知られています。
             </p>
 
             <p>&nbsp;</p>
@@ -785,7 +745,7 @@
               <div class="swiper-button-prev"></div>
             </div>
             <div class="flex-column">
-              <h6>麒麟の湯</h6>
+              <h6>木林の湯</h6>
 
               <p>
                 星野リゾート トマムで絶景の星空観察を体験
@@ -794,7 +754,7 @@
 
               <p>&nbsp;</p>
 
-              <h6>司祭の湯</h6>
+              <h6>紫彩の湯</h6>
 
               <p>
                 新富良野プリンスホテルで天然ミネラルウォーターを楽しむ
@@ -932,7 +892,7 @@
             <div class="answer">
               <p>
                 主要なクレジット カード (Visa、MasterCard、American )
-                をご利用いただけます Express）
+                をご利用いただけます
               </p>
             </div>
           </div>
@@ -1034,9 +994,11 @@
 
             <div class="answer">
               <p>
-                駐車場の位置はこちらからご確認ください。 星野リゾート トマム
-                https://www.snowtomamu.jp/winter/areamap/ OMO7 旭川 ｂｙ 星の
-                リゾート https://omo-hotels.com/asahikawa/access/#anc-parking
+                駐車場の位置はこちらからご確認ください。<br />
+                星野リゾート トマム<br />
+                https://www.snowtomamu.jp/winter/areamap/ <br />OMO7 旭川 ｂｙ
+                星の リゾート
+                <br />https://omo-hotels.com/asahikawa/access/#anc-parking
               </p>
             </div>
           </div>
@@ -1060,32 +1022,9 @@
             申し込み内容と予約確認メールの内容がお間違いないか確認してください
             ※この段階では予約は確定しておりません
           </p>
-          <h6>弊社で予約する理由 :</h6>
-          <p>
-            1.<span>柔軟なカスタマイズ</span>:
-            あなたのスケジュールや好みに合わせて旅行体験をカスタマイズできます
-            。
-          </p>
-          <p>
-            2.<span>限定アメニティ</span>
-            プール、サウナなどのオプションを豊富にご用意しております。
-          </p>
-          <p>
-            3.<span>スキーリゾートを満喫してください</span>
-            手入れの行き届いたキャンピングカーと最先端のスキーを満喫してください。
-          </p>
-          <p>
-            4.<span>安全かつ簡単な予約</span>
-            当社のユーザーフレンドリーなプラットフォームにより、スムーズな予約が可能です。
-          </p>
-
-          <p>
-            5.<span>カスタマーサポート</span>弊社の専任サポートチームは、
-            ご質問やご予約の調整についてお手伝いいたします。
-          </p>
         </div>
 
-        <form id="reservation">
+        <form id="reservation-japan">
           <div class="form-item">
             <label for="name">名前:</label>
             <input type="text" id="name" name="name" required />
@@ -1219,7 +1158,7 @@
             <textarea id="notes" name="notes" rows="4"></textarea>
           </div>
           <div class="reservation-btn my-midium">
-            <button type="submit">今予約する</button>
+            <button type="submit">予約申し込みする</button>
           </div>
         </form>
       </section>
@@ -1229,10 +1168,7 @@
           <div class="info-item-wrapper">
             <div class="info-item">
               <span class="material-symbols-outlined"> Email</span>
-              <p>
-                758-209 Bibi, Chitose,<br />
-                Hokkaido 066-0012
-              </p>
+              <p>〒066-0012 <br />北海道千歳市美々７５８−２０９</p>
             </div>
 
             <div class="info-imem">
@@ -1255,8 +1191,13 @@
     <!-- END Main Area -->
 
     <footer>
-      <img src="./common/images/CRC_logo.webp" />
-      <img src="./common/images/hoshino_logo.webp" />
+      <a href="https://japan-crc.com/" target="_blank">
+        <img src="./common/images/CRC_logo.webp" />
+      </a>
+
+      <a href="https://hoshinoresorts.com/jp/" target="_blank">
+        <img src="./common/images/hoshino_logo.webp" />
+      </a>
     </footer>
 
     <!-- Initialize Swiper -->
