--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
               Apart from skiing, the Hokkaido Powder Belt offers a rich
               après-ski scene with local dining, Ice Village, and luxurious
               accommodations. Resorts like Hoshino Resorts TOMAMU provide unique
-              attractions such as Mina-Mina Beach(Largest indoor pool in Japan)
-              and Ice Bar in the Ice Village, ensuring an exciting stay.
+              attractions such as Mina-Mina Beach(Largest wave indoor pool in
+              Japan) and Ice Bar in the Ice Village, ensuring an exciting stay.
             </p>
             <p>
               Experience unparalleled snow quality, diverse ski options, and
@@ -273,13 +273,14 @@
                     <li>parking ＊not include securing parking space</li>
                   </ul>
                 </ul>
+                <div class="text-center">
+                  <a
+                    href="https://www.snowtomamu.jp/winter/en/"
+                    class="my-midium"
+                    >Learn More</a
+                  >
+                </div>
               </div>
-            </div>
-
-            <div class="text-center">
-              <a href="https://www.snowtomamu.jp/winter/en/" class="my-midium"
-                >Learn More</a
-              >
             </div>
             <div class="column-2 my-midium">
               <div>
@@ -303,6 +304,19 @@
                     </li>
                   </ul>
                 </ul>
+
+                <p>
+                  Parking fees are not included in the plan and it must be paid
+                  separately at OMO7Asahikawa by Hoshino Resorts.
+                </p>
+
+                <div class="text-center my-midium">
+                  <a
+                    href="https://omo-hotels.com/asahikawa/en/"
+                    class="my-midium"
+                    >Learn More</a
+                  >
+                </div>
               </div>
 
               <div class="swiper">
@@ -330,18 +344,17 @@
                 <div class="swiper-button-prev"></div>
               </div>
             </div>
+            <div class="my-midium">
+              <p>
+                *No reservation is required when using Hoshino Resort
+                facilities. No power supply or parking space will be provided.
+              </p>
 
-            <p class="warning">
-              Parking fees are not included in the plan and it must be paid
-              separately at OMO7Asahikawa by Hoshino Resorts.
-            </p>
-
-            <div class="text-center my-midium">
-              <a href="https://omo-hotels.com/asahikawa/en/" class="my-midium"
-                >Learn More</a
-              >
+              <p>
+                *No refunds will be made for those who do not use Hoshino Resort
+                facilities.
+              </p>
             </div>
-
             <div class="reservation-btn">
               <a href="#reservation">BOOKING REQUEST</a>
             </div>
@@ -512,8 +525,10 @@
           </form>
 
           <div>
-            <p>Children under 6 years old are free of charge.</p>
-            <p>※There is a charge for meals at the hotel.<br /></p>
+            <p>
+              ※Children under 6 years old are free of charge, however, breakfast
+              only for 4~6 years old is charged separately.
+            </p>
             <p>Camper rental fee</p>
             <p>+Hokkaido Powder Belt ticket for the number of people</p>
             <p>
