--- a/index_jp.html
+++ b/index_jp.html
@@ -151,7 +151,7 @@
             </h2>
 
             <h2 class="tab-label-heading">
-              <label class="tab-label" for="tab-b">設備</label>
+              <label class="tab-label" for="tab-b">施設</label>
             </h2>
 
             <h2 class="tab-label-heading">
@@ -233,17 +233,19 @@
                     <li>駐車 ＊駐車スペースの確保は含まれていません</li>
                   </ul>
                 </ul>
+                <div class="text-center">
+                  <a
+                    href="https://www.snowtomamu.jp/winter/en/"
+                    class="my-midium"
+                    >Read More</a
+                  >
+                </div>
               </div>
             </div>
 
-            <div class="text-center">
-              <a href="https://www.snowtomamu.jp/winter/en/" class="my-midium"
-                >Read More</a
-              >
-            </div>
             <div class="column-2 my-midium">
               <div>
-                <h5>星野リゾート OMO7旭川</h5>
+                <h6>星野リゾート OMO7旭川</h6>
                 <p>
                   星野リゾート
                   OMO7旭川は、北海道旭川市の中心部に位置するスタイリッシュで現代的なホテルです。北海道パウダーベルトを探索し、さまざまな冬のスポーツアクティビティを楽しむのに最適な拠点を提供します。
@@ -259,6 +261,19 @@
                     <li>地元情報やリソースのためのOMO Baseへのアクセス</li>
                   </ul>
                 </ul>
+
+                <p>
+                  駐車料金はプランに含まれておらず、Hoshino
+                  ResortsのOMO7Asahikawaで別途支払う必要があります。
+                </p>
+
+                <div class="text-center my-midium">
+                  <a
+                    href="https://omo-hotels.com/asahikawa/en/"
+                    class="my-midium"
+                    >詳細を見る</a
+                  >
+                </div>
               </div>
               <div class="swiper">
                 <div class="swiper-wrapper">
@@ -285,17 +300,15 @@
                 <div class="swiper-button-prev"></div>
               </div>
             </div>
-            <p class="warning">
-              駐車料金はプランに含まれておらず、Hoshino
-              ResortsのOMO7Asahikawaで別途支払う必要があります。
-            </p>
+            <div class="my-midium">
+              <p>
+                ＊星野リゾート施設利用時に予約は不要。電源、駐車場の確保はございません。
+              </p>
 
-            <div class="text-center my-midium">
-              <a href="https://omo-hotels.com/asahikawa/en/" class="my-midium"
-                >詳細を見る</a
-              >
+              <p>
+                ＊星野リゾートの施設を使用しなかった場合でも使用料の返金はございません。
+              </p>
             </div>
-
             <div class="reservation-btn">
               <a href="#reservation">予約申し込みする</a>
             </div>
@@ -459,6 +472,7 @@
           </form>
 
           <div>
+            <p>※6歳以下は無料、但し、4~6歳の朝食のみ別途料金がかかります。</p>
             <p>キャンピングカーレンタル料</p>
             <p>＋北海道パウダーベルトチケット人数分</p>
             <p>
