--- a/index_jp.html
+++ b/index_jp.html
@@ -45,7 +45,9 @@
         <h5 class="header-title">
           ニーズに合わせた柔軟なキャンピングカーツアーパッケージ
         </h5>
-        <a class="header-reservation-btn" href="./">予約申し込みする</a>
+        <a class="header-reservation-btn" href="#reservation-japan"
+          >予約申し込みする</a
+        >
       </div>
       <div id="video-area">
         <video
@@ -184,14 +186,14 @@
                     <li>
                       HPBの5日間パス（https://hokkaido-powder-belt.jp/index-en.php）
                     </li>
-                    <li>星野リゾート トマムのサービスへのアクセス</li>
-                    <li>星野リゾート OMO 7旭川のサービスへのアクセス</li>
+                    <li>星野リゾート トマムの施設利用</li>
+                    <li>星野リゾート OMO 7旭川の施設利用</li>
                   </ul>
                 </div>
               </div>
 
               <div class="reservation-btn">
-                <a href="#reservation">予約申し込みする</a>
+                <a href="#reservation-japan">予約申し込みする</a>
               </div>
             </div>
           </div>
@@ -237,6 +239,7 @@
                   <a
                     href="https://www.snowtomamu.jp/winter/en/"
                     class="my-midium"
+                    target="_blank"
                     >Read More</a
                   >
                 </div>
@@ -271,7 +274,8 @@
                   <a
                     href="https://omo-hotels.com/asahikawa/en/"
                     class="my-midium"
-                    >詳細を見る</a
+                    target="_blank"
+                    >Read More</a
                   >
                 </div>
               </div>
@@ -310,7 +314,7 @@
               </p>
             </div>
             <div class="reservation-btn">
-              <a href="#reservation">予約申し込みする</a>
+              <a href="#reservation-japan">予約申し込みする</a>
             </div>
           </div>
           <div class="tab-panel panel-c" role="tabpanel">
@@ -318,7 +322,7 @@
               <div class="my-midium">
                 <p>
                   北海道パウダーベルト5日券は、トマムスキー場、富良野スキー場、カムイスキー場3スキー場で利用可能。
-                  有効期限はスキー譲の利用開始日から10日間です。スキー場は5回利用可能できます。
+                  有効期限はスキー場の利用開始日から10日間です。スキー場は5回利用可能です。
                 </p>
                 <h5>トマム スキーエリア</h5>
                 <p>
@@ -349,7 +353,7 @@
             </div>
 
             <div class="reservation-btn">
-              <a href="#reservation">予約申し込みする</a>
+              <a href="#reservation-japan">予約申し込みする</a>
             </div>
           </div>
           <div class="tab-panel panel-d" role="tabpanel">
@@ -423,7 +427,7 @@
             </ul>
 
             <div class="reservation-btn">
-              <a href="#reservation">予約申し込みする</a>
+              <a href="#reservation-japan">予約申し込みする</a>
             </div>
           </div>
         </div>
@@ -543,7 +547,7 @@
         </div>
 
         <div class="reservation-btn my-midium">
-          <a href="#reservation">予約申し込みする</a>
+          <a href="#reservation-japan">予約申し込みする</a>
         </div>
       </section>
 
