--- a/index.html
+++ b/index.html
@@ -1213,6 +1213,29 @@
           </div>
 
           <div class="form-item">
+            <label for="loan-date">Loan Date:</label>
+            <input
+              type="date"
+              id="loan-date"
+              name="loan-date"
+              min="2024-12-20"
+              max="2025-03-31"
+              required
+            />
+          </div>
+
+          <div class="form-item">
+            <label for="return-date">Return Date:</label>
+            <input
+              type="date"
+              id="return-date"
+              name="return-date"
+              min="2024-12-20"
+              max="2025-03-31"
+              required
+            />
+          </div>
+          <div class="form-item">
             <label for="license-country"
               >Driver's license issued country:</label
             >
@@ -1349,11 +1372,6 @@
           <div class="form-item">
             <label for="area">Area of use:</label>
             <input type="text" id="area" name="area" required />
-          </div>
-
-          <div class="form-item">
-            <label for="coupon">Coupon:</label>
-            <input type="text" id="coupon" name="coupon" />
           </div>
 
           <div class="form-item">
