--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title></title>
-    <meta name="description" content="" />
+    <title>Camper Car Plan around Hokkaido Powder Belt</title>
+    <meta
+      name="description"
+      content="A flexible camper ski tour to 3 selected ski resorts in Hokkaido. Comfortable trip with the world's highest quality powder snow and use of Hoshino Resort facilities. Includes 5-day lift tickets including Tomamu, Furano, and Kamui Ski Rinks; reservations available from winter 2024 through spring 2025; 4 nights/5 days from 215,300 yen."
+    />
     <meta name="keywords" content="" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="format-detection" content="telephone=no,email=no,address=no" />
