--- a/index_jp.html
+++ b/index_jp.html
@@ -2,8 +2,11 @@
 <html lang="jp">
   <head>
     <meta charset="utf-8" />
-    <title></title>
-    <meta name="description" content="" />
+    <title>北海道パウダーベルトをめぐるキャンピングカープラン</title>
+    <meta
+      name="description"
+      content="北海道の厳選3スキー場を巡る、自由自在なキャンピングカースキーツアー。世界最高品質のパウダースノーと星野リゾート施設利用で快適な旅。トマム、富良野、カムイスキーリンクスを含む5日間リフト券付。2024年冬から2025年春まで予約可能。4泊5日215,300円から。"
+    />
     <meta name="keywords" content="" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="format-detection" content="telephone=no,email=no,address=no" />
@@ -450,7 +453,7 @@
         <h3>Price</h3>
         <div class="simulation-wrapper">
           <h5>料金シュミレーション</h5>
-          <form id="simulation">
+          <form id="simulation_jp">
             <div class="simulation-item">
               <label for="members">乗客</label>
               <select name="members" id="members">
